libclang-bootstrap/imports.h

void             clang_PrintingPolicy_dispose (CXPrintingPolicy Policy);
void             clang_annotateTokens (CXTranslationUnit TU, CXToken * Tokens, unsigned NumTokens, CXCursor * Cursors);
void             clang_disposeTokens (CXTranslationUnit TU, CXToken * Tokens, unsigned NumTokens);
CXEvalResultKind   clang_EvalResult_getKind (CXEvalResult E);
int                clang_EvalResult_getAsInt (CXEvalResult E);
long long          clang_EvalResult_getAsLongLong (CXEvalResult E);
unsigned           clang_EvalResult_isUnsignedInt (CXEvalResult E);
unsigned long long clang_EvalResult_getAsUnsigned (CXEvalResult E);
double             clang_EvalResult_getAsDouble (CXEvalResult E);
const char *       clang_EvalResult_getAsStr (CXEvalResult E);
void               clang_EvalResult_dispose (CXEvalResult E);