libclang-bindings/src/Clang/LowLevel/FFI.hs


-- OMITTED: CXString         clang_constructUSR_ObjCClass (const char * class_name);

-- OMITTED: CXString         clang_constructUSR_ObjCCategory (const char * class_name, const char * category_name);

-- OMITTED: CXString         clang_constructUSR_ObjCProtocol (const char * protocol_name);

-- OMITTED: CXString         clang_constructUSR_ObjCIvar (const char * name, CXString classUSR);

-- OMITTED: CXString         clang_constructUSR_ObjCMethod (const char * name, unsigned isInstanceMethod, CXString classUSR);

-- OMITTED: CXString         clang_constructUSR_ObjCProperty (const char * property, CXString classUSR);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorSpelling :: R CXCursor_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getSpellingNameRange :: R CXCursor_ -> CUInt -> CUInt -> W CXSourceRange_ -> IO ()

-- OMITTED: unsigned         clang_PrintingPolicy_getProperty (CXPrintingPolicy Policy, enum CXPrintingPolicyProperty Property);

-- OMITTED: void             clang_PrintingPolicy_setProperty (CXPrintingPolicy Policy, enum CXPrintingPolicyProperty Property, unsigned Value);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorPrintingPolicy :: R CXCursor_ -> IO CXPrintingPolicy

foreign import capi unsafe "clang_wrappers.h clang_PrintingPolicy_dispose"
  nowrapper_PrintingPolicy_dispose :: CXPrintingPolicy -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorPrettyPrinted :: R CXCursor_ -> CXPrintingPolicy -> W CXString_ -> IO ()

-- OMITTED: CXString         clang_getTypePrettyPrinted (CXType CT, CXPrintingPolicy cxPolicy);

-- OMITTED: CXString         clang_getFullyQualifiedName (CXType CT, CXPrintingPolicy Policy, unsigned WithGlobalNsPrefix);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorDisplayName :: R CXCursor_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorReferenced :: R CXCursor_ -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorDefinition :: R CXCursor_ -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_isCursorDefinition :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCanonicalCursor :: R CXCursor_ -> W CXCursor_ -> IO ()

-- OMITTED: int              clang_Cursor_getObjCSelectorIndex (CXCursor);

-- OMITTED: int              clang_Cursor_isDynamicCall (CXCursor C);

-- OMITTED: CXType           clang_Cursor_getReceiverType (CXCursor C);

-- OMITTED: unsigned         clang_Cursor_getObjCPropertyAttributes (CXCursor C, unsigned reserved);

-- OMITTED: CXString         clang_Cursor_getObjCPropertyGetterName (CXCursor C);

-- OMITTED: CXString         clang_Cursor_getObjCPropertySetterName (CXCursor C);

-- OMITTED: unsigned         clang_Cursor_getObjCDeclQualifiers (CXCursor C);

-- OMITTED: unsigned         clang_Cursor_isObjCOptional (CXCursor C);

-- OMITTED: unsigned         clang_Cursor_isVariadic (CXCursor C);

-- OMITTED: unsigned         clang_Cursor_isExternalSymbol (CXCursor C, CXString * language, CXString * definedIn, unsigned * isGenerated);

-- OMITTED: CXSourceRange    clang_Cursor_getCommentRange (CXCursor C);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getRawCommentText :: R CXCursor_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getBriefCommentText :: R CXCursor_ -> W CXString_ -> IO ()

-- *** Token extraction and manipulation ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__LEX.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getToken :: CXTranslationUnit -> R CXSourceLocation_ -> IO (Ptr CXToken_)

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTokenKind :: Ptr CXToken_ -> IO (SimpleEnum CXTokenKind)

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTokenSpelling :: CXTranslationUnit -> Ptr CXToken_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTokenLocation :: CXTranslationUnit -> Ptr CXToken_ -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTokenExtent :: CXTranslationUnit -> Ptr CXToken_ -> W CXSourceRange_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_tokenize :: CXTranslationUnit -> R CXSourceRange_ -> Ptr (Ptr CXToken_) -> Ptr CUInt -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_annotateTokens"
  nowrapper_annotateTokens :: CXTranslationUnit -> Ptr CXToken_ -> CUInt -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h clang_disposeTokens"
  nowrapper_disposeTokens :: CXTranslationUnit -> Ptr CXToken_ -> CUInt -> IO ()

-- *** Debugging facilities ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__DEBUG.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorKindSpelling :: SimpleEnum CXCursorKind -> W CXString_ -> IO ()

-- OMITTED: void     clang_getDefinitionSpellingAndExtent (CXCursor, const char * * startBuf, const char * * endBuf, unsigned * startLine, unsigned * startColumn, unsigned * endLine, unsigned * endColumn);

-- OMITTED: void     clang_enableStackTraces (void);

-- OMITTED: void     clang_executeOnThread (void(*fn)(void *), void * user_data, unsigned stack_size); // NOTE: function pointer syntax not supported by the libclang-bootstrap parser

-- *** Miscellaneous utility functions ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__MISC.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getClangVersion :: W CXString_ -> IO ()

-- OMITTED: void               clang_toggleCrashRecovery (unsigned isEnabled);

-- OMITTED: void               clang_getInclusions (CXTranslationUnit tu, CXInclusionVisitor visitor, CXClientData client_data);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_Evaluate :: R CXCursor_ -> IO CXEvalResult

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_getKind"
  nowrapper_EvalResult_getKind :: CXEvalResult -> IO (SimpleEnum CXEvalResultKind)

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_getAsInt"
  nowrapper_EvalResult_getAsInt :: CXEvalResult -> IO CInt

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_getAsLongLong"
  nowrapper_EvalResult_getAsLongLong :: CXEvalResult -> IO CLLong

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_isUnsignedInt"
  nowrapper_EvalResult_isUnsignedInt :: CXEvalResult -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_getAsUnsigned"
  nowrapper_EvalResult_getAsUnsigned :: CXEvalResult -> IO CULLong

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_getAsDouble"
  nowrapper_EvalResult_getAsDouble :: CXEvalResult -> IO CDouble

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_getAsStr"
  nowrapper_EvalResult_getAsStr :: CXEvalResult -> IO (ConstPtr CChar)

foreign import capi unsafe "clang_wrappers.h clang_EvalResult_dispose"
  nowrapper_EvalResult_dispose :: CXEvalResult -> IO ()

